--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -24,56 +24,19 @@
       "steps": [
         {
           "name": "Checkout Code",
-          "uses": "actions/checkout@v3"
-        },
-        {
-          "name": "Grant All Perms to Make Cache Restoring Possible",
-          "run": "sudo mkdir -p /usr/local/etc/roswell\n                 sudo chown \"${USER}\" /usr/local/etc/roswell\n                 # Here the ros binary will be restored:\n                 sudo chown \"${USER}\" /usr/local/bin",
-          "shell": "bash"
-        },
-        {
-          "name": "Get Current Month",
-          "id": "current-month",
-          "run": "echo \"value=$(date -u \"+%Y-%m\")\" >> $GITHUB_OUTPUT",
-          "shell": "bash"
-        },
-        {
-          "name": "Cache Roswell Setup",
-          "id": "cache",
-          "uses": "actions/cache@v3",
-          "with": {
-            "path": "qlfile\nqlfile.lock\n~/.cache/common-lisp/\n~/.roswell\n/usr/local/etc/roswell\n/usr/local/bin/ros\n/usr/local/Cellar/roswell\n.qlot",
-            "key": "a-${{ steps.current-month.outputs.value }}-${{ env.cache-name }}-ubuntu-latest-quicklisp-sbcl-bin-${{ hashFiles('qlfile.lock', '*.asd') }}"
-          }
-        },
-        {
-          "name": "Restore Path To Cached Files",
-          "run": "echo $HOME/.roswell/bin >> $GITHUB_PATH\n                 echo .qlot/bin >> $GITHUB_PATH",
-          "shell": "bash",
-          "if": "steps.cache.outputs.cache-hit == 'true'"
+          "uses": "actions/checkout@v4"
         },
         {
           "name": "Setup Common Lisp Environment",
-          "uses": "40ants/setup-lisp@v2",
+          "uses": "40ants/setup-lisp@v4",
           "with": {
-            "asdf-system": "reblocks-typeahead"
-          },
-          "if": "steps.cache.outputs.cache-hit != 'true'"
-        },
-        {
-          "name": "Checkout Code",
-          "uses": "actions/checkout@v3"
-        },
-        {
-          "name": "Setup Common Lisp Environment",
-          "uses": "40ants/setup-lisp@v2",
-          "with": {
-            "asdf-system": "reblocks-typeahead"
+            "asdf-system": "reblocks-typeahead",
+            "cache": "true"
           }
         },
         {
-          "name": "Change dist to Ultralisp",
-          "run": "echo 'dist ultralisp http://dist.ultralisp.org' > qlfile",
+          "name": "Change dist to Ultralisp if qlfile does not exist",
+          "run": "if [[ ! -e qlfile ]]; then echo 'dist ultralisp http://dist.ultralisp.org' > qlfile; fi",
           "shell": "bash"
         },
         {
@@ -83,27 +46,7 @@
         },
         {
           "name": "Install SBLint wrapper",
-          "run": "qlot exec ros install 40ants-linter",
-          "shell": "bash"
-        },
-        {
-          "name": "Run Linter",
-          "run": "qlot exec 40ants-linter --system \"reblocks-typeahead, reblocks-typeahead-docs, reblocks-typeahead-tests\"",
-          "shell": "bash"
-        },
-        {
-          "name": "Change dist to Ultralisp",
-          "run": "echo 'dist ultralisp http://dist.ultralisp.org' > qlfile",
-          "shell": "bash"
-        },
-        {
-          "name": "Update Qlot",
-          "run": "qlot update --no-deps",
-          "shell": "bash"
-        },
-        {
-          "name": "Install SBLint wrapper",
-          "run": "qlot exec ros install 40ants-linter",
+          "run": "qlot exec ros install 40ants-asdf-system 40ants-linter",
           "shell": "bash"
         },
         {
